Fix Cancel operation on FidoHidDevice

Current Cancel operation on FidoHidDevice does not conform to behavior
defined by the CTAP spec. More specifically, CTAP spec mandates that once
Cancel operation is invoked, all pending transactions must be deleted
and cancel command must be sent before any remaining transactions. This
is not how current FidoHidDevice works. Currently FidoHidDevice will
simply add Cancel command packet into a queue and wait for prior
transaction to finish before sending Cancel command to the device.

Bug: 833806
Change-Id: I66f67e1ff36aa724c0340fd6630a941da911921b
Reviewed-on: https://chromium-review.googlesource.com/1111617
Commit-Queue: Jun Choi <hongjunchoi@chromium.org>
Reviewed-by: Jan Wilken Dörrie <jdoerrie@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569914}
Former-commit-id: 12ed67d3c95b9239a3d580f5437c203ad3dd56f6